# ckan-example

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  ckan.ini  docker-compose.yml  entrypoint.sh
.kamal/: secrets.development  secrets.local
ckanext-example/: MANIFEST.in  README.md  setup.cfg  test.ini
ckanext-example/.github/workflows/: test.yml
ckanext-example/ckanext/example/: plugin.py
ckanext-example/ckanext/example/assets/: script.js  webassets.yml
ckanext-example/ckanext/example/tests/: test_plugin.py
config/: deploy.yml
docker/psql/: Dockerfile
files/etc/: ckan-worker.conf  ckan.conf  supervisord.conf
scripts/: install-ckan-extensions.sh  install-ckan.sh  install-locales.sh  install-main-extension.sh  install-os-deps.sh  setup-ckan-ini-file.sh
